# scrapper-fresh

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Caddyfile  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  package.json  pyproject.toml  turbo.json
.claude/: CLAUDE.md  hooks.json  settings.json
.claude/agents/: REGISTRY.json  ai-engineer.md  analyst.md  architect.md  art-director.md  backend-builder.md  backend.md  comms-drafter.md  coordinator.md  data.md  database-architect.md  deep-worker.md  deployer.md  (+20 more)
.devcontainer/: Dockerfile  devcontainer.json
apps/shipment-tracker/backend/: Dockerfile  pyproject.toml
apps/shipment-tracker/backend/src/tracker/: __init__.py  config.py  db.py  main.py
apps/shipment-tracker/backend/src/tracker/api/: __init__.py  ai.py  alerts.py  analytics.py  auth.py  counterparties.py  dashboard.py  deals.py  meetings.py  reports.py  router.py  shipments.py  vessels.py  ws.py
apps/shipment-tracker/backend/src/tracker/integrations/: __init__.py  ais.py  anthropic.py  deepgram.py  gmail.py  google_calendar.py
apps/shipment-tracker/backend/src/tracker/models/: schema.sql  seed.sql
apps/shipment-tracker/backend/src/tracker/models/migrations/: 001_foundation.sql  002_meetings.sql  003_polish.sql
apps/shipment-tracker/backend/src/tracker/schemas/: __init__.py  alerts.py  counterparties.py  deals.py  meetings.py  shipments.py  vessels.py
apps/shipment-tracker/backend/src/tracker/services/: __init__.py  ai_extractor.py  alert_engine.py  analytics_service.py  audit.py  auth_service.py  deal_manager.py  email_parser.py  meeting_service.py  memory_service.py  report_generator.py  risk_scorer.py  shipment_state.py  vessel_tracker.py
apps/shipment-tracker/backend/src/tracker/workers/: __init__.py  ais_poller.py  alert_checker.py  calendar_sync.py  email_poller.py  meet_bot.py  report_scheduler.py  transcript_worker.py
docs/: CUSTOMER_QUICKSTART.md  DESIGN_SYSTEM.md  GO_LIVE_CHECKLIST.md  RU_MARKET_DEFAULTS.md  WEB_UI.md
scripts/: decide.sh  e2e_test.py  finding.sh  handoff.sh  orchestrate.sh  propose-policy.sh  quality-report.sh  setup_cron.sh  smoke_test.sh  system-health.sh  validate-schema.py  vps_deploy.sh  worker.py
skills/: EVALUATION_REPORT.md
tests/: conftest.py  test_models.py  test_normalizers.py  test_parser.py  test_twogis.py  test_website_contacts.py  test_yandex_maps.py  test_zakupki.py
(+218 files in other folders)
