[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapper"
version = "0.1.0"
description = "Lead generation pipeline for Russian construction companies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "click>=8.1",
    "openpyxl>=3.1",
    "tenacity>=8.2",
    "loguru>=0.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
scrapper = "scrapper.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["scrapper"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

# psycopg3 dict_row is configured at pool level; mypy can't infer row types
[[tool.mypy.overrides]]
module = ["scrapper.db.queue", "scrapper.cli"]
disable_error_code = ["call-overload", "index", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
